--- a/src/app/comp/main/navbar/navbar.component.html
+++ b/src/app/comp/main/navbar/navbar.component.html
@@ -3,11 +3,11 @@
         <div class="d-flex align-items-center">
             <a class="navbar-brand d-flex align-items-center" [routerLink]="['/']">
                 <img src="/assets/android-icon-36x36.png" style="width: 36px; height: 36px;">
-                <span class="ms-2 fs-3">
+                <span class="ms-2 fs-3 d-none d-lg-inline">
                     {{ l10nphrase.app.title }}
                 </span>
             </a>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav d-none d-lg-flex">
                 <li class="nav-item">
                     <a [ngClass]="{'nav-link': true, 'active': url === '/' || url === '/search'}"
                         [routerLink]="['/']">{{
@@ -32,15 +32,18 @@
             </ul>
         </div>
         <div class="d-flex align-items-center">
-            <form class="d-flex me-5" role="search" [formGroup]="searchForm" (submit)="onSubmitSearch()">
+            <form class="d-flex me-3 me-lg-4 me-xl-5" role="search" [formGroup]="searchForm"
+                (submit)="onSubmitSearch()">
                 <div class="input-group me-2">
-                    <input class="form-control" type="search" [placeholder]="l10nphrase.navbar.searchPlaceholder"
+                    <input class="form-control search" type="search" [placeholder]="l10nphrase.navbar.searchPlaceholder"
                         formControlName="phrase" name="navbar-search-phrase" id="navbar-search-phrase"
-                        [attr.aria-label]="l10nphrase.navbar.searchBtn" style="min-width: 460px;" autocomplete="off">
+                        [attr.aria-label]="l10nphrase.navbar.searchBtn" [attr.data-devicetype]="deviceType"
+                        autocomplete="off">
                     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                        data-bs-auto-close="outside" aria-expanded="false">{{
-                        l10nphrase.navbar.searchOptions
-                        }}</button>
+                        data-bs-auto-close="outside" aria-expanded="false">
+                        <span class="d-inline d-lg-none"><i ngClass="bi bi-sliders"></i></span>
+                        <span class="d-none d-lg-inline">{{ l10nphrase.navbar.searchOptions }}</span>
+                    </button>
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li class="dropdown-item">
                             <div class="form-check">
@@ -128,91 +131,93 @@
                         </li>
                     </ul>
                 </div>
-                <button class="btn btn-success text-nowrap" [disabled]="searchBusy" type="submit">{{ searchBusy ?
-                    l10nphrase.navbar.searchBtnBusy :
-                    l10nphrase.navbar.searchBtn }}</button>
+                <button class="btn btn-success text-nowrap" [disabled]="searchBusy" type="submit">
+                    <span class="d-inline d-lg-none"><i ngClass="bi bi-binoculars"></i></span>
+                    <span class="d-none d-lg-inline">{{ searchBusy ? l10nphrase.navbar.searchBtnBusy :
+                        l10nphrase.navbar.searchBtn }}</span>
+                </button>
             </form>
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link fs-3 py-0" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="bi-list"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li class="dropdown-item cursor-pointer" (click)="onClearCache()">
-                            <i class="bi bi-arrow-repeat me-2"></i>
-                            {{ l10nphrase.navbar.clearCacheLink }}
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        @for(locale of locales; track $index) {
-                        <li class="dropdown-item cursor-pointer" (click)="onSwitchLocale(locale)">
-                            @if(locale !== currentLocale) {
-                            <i ngClass="bi bi-translate me-2"></i>
-                            }
-                            @else {
-                            <i class="bi bi-check2-circle text-success me-2"></i>
-                            }
-                            {{ localesLocalized[locale] }}
-                        </li>
+
+            <div class="dropdown">
+                <button class="btn btn-outline-secondary border-0 dropdown-toggle hide-toggler" type="button"
+                    data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+                    <i class="bi-list"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li class="dropdown-item cursor-pointer" (click)="onClearCache()">
+                        <i class="bi bi-arrow-repeat me-2"></i>
+                        {{ l10nphrase.navbar.clearCacheLink }}
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    @for(locale of locales; track $index) {
+                    <li class="dropdown-item cursor-pointer" (click)="onSwitchLocale(locale)">
+                        @if(locale !== currentLocale) {
+                        <i ngClass="bi bi-translate me-2"></i>
                         }
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li class="dropdown-item cursor-pointer" (click)="applyTheme('light')">
-                            <i
-                                [ngClass]="{ 'bi me-2': true, 'bi-brightness-high-fill text-success': appTheme == 'light', 'bi-brightness-high': appTheme != 'light' }"></i>
-                            hell
-                        </li>
-                        <li class="dropdown-item cursor-pointer" (click)="applyTheme('dark')">
-                            <i
-                                [ngClass]="{ 'bi me-2': true, 'bi-moon-fill text-success': appTheme == 'dark', 'bi-moon': appTheme != 'dark' }"></i>
-                            dunkel
-                        </li>
-                        <li class="dropdown-item cursor-pointer" (click)="applyTheme(null)">
-                            <i
-                                [ngClass]="{ 'bi me-2': true, 'bi-circle-half text-success': appTheme == 'auto' || appTheme == null, 'bi-brightness-high':appTheme != 'auto' && appTheme != null }"></i>
-                            automatisch
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li>
-                            <a class="dropdown-item" [routerLink]="['/help']">
-                                <i class="bi bi-question-circle me-2"></i>
-                                {{ l10nphrase.navbar.helpLink }}
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" [routerLink]="['/about']">
-                                <i class="bi bi-info-circle me-2"></i>
-                                {{ l10nphrase.navbar.aboutLink }}
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" target="_blank" [href]="promolink" *ngIf="promolink">
-                                <i class="bi bi-git me-2"></i>
-                                {{ l10nphrase.navbar.promoLink }}
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" target="_blank" [href]="webclientlink" *ngIf="webclientlink">
-                                <i class="bi bi-browser-edge me-2"></i>
-                                {{ l10nphrase.navbar.webclientLink }}
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li>
-                            <a class="dropdown-item" [routerLink]="['/logout']">
-                                <i class="bi bi-box-arrow-left me-2"></i>
-                                {{ l10nphrase.navbar.logoutLink }}
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+                        @else {
+                        <i class="bi bi-check2-circle text-success me-2"></i>
+                        }
+                        {{ localesLocalized[locale] }}
+                    </li>
+                    }
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="dropdown-item cursor-pointer" (click)="applyTheme('light')">
+                        <i
+                            [ngClass]="{ 'bi me-2': true, 'bi-brightness-high-fill text-success': appTheme == 'light', 'bi-brightness-high': appTheme != 'light' }"></i>
+                        hell
+                    </li>
+                    <li class="dropdown-item cursor-pointer" (click)="applyTheme('dark')">
+                        <i
+                            [ngClass]="{ 'bi me-2': true, 'bi-moon-fill text-success': appTheme == 'dark', 'bi-moon': appTheme != 'dark' }"></i>
+                        dunkel
+                    </li>
+                    <li class="dropdown-item cursor-pointer" (click)="applyTheme(null)">
+                        <i
+                            [ngClass]="{ 'bi me-2': true, 'bi-circle-half text-success': appTheme == 'auto' || appTheme == null, 'bi-brightness-high':appTheme != 'auto' && appTheme != null }"></i>
+                        automatisch
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li>
+                        <a class="dropdown-item" [routerLink]="['/help']">
+                            <i class="bi bi-question-circle me-2"></i>
+                            {{ l10nphrase.navbar.helpLink }}
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" [routerLink]="['/about']">
+                            <i class="bi bi-info-circle me-2"></i>
+                            {{ l10nphrase.navbar.aboutLink }}
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" target="_blank" [href]="promolink" *ngIf="promolink">
+                            <i class="bi bi-git me-2"></i>
+                            {{ l10nphrase.navbar.promoLink }}
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" target="_blank" [href]="webclientlink" *ngIf="webclientlink">
+                            <i class="bi bi-browser-edge me-2"></i>
+                            {{ l10nphrase.navbar.webclientLink }}
+                        </a>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li>
+                        <a class="dropdown-item" [routerLink]="['/logout']">
+                            <i class="bi bi-box-arrow-left me-2"></i>
+                            {{ l10nphrase.navbar.logoutLink }}
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </nav>
