--- a/src/app/comp/main/navbar/navbar.component.scss
+++ b/src/app/comp/main/navbar/navbar.component.scss
@@ -5,6 +5,29 @@
     }
 }
 
-mat-form-field {
-    transition: width .18s ease-in;
+.hide-toggler {
+    &:not(:focus):not(:hover):not(:active) {
+
+        background-color: transparent !important;
+    }
+
+    &::after {
+        display: none !important;
+    }
+}
+
+input#navbar-search-phrase {
+    width: 420px;
+}
+
+@media (max-width: 575.98px) {
+    input#navbar-search-phrase {
+        width: 180px;
+    }
+}
+
+@media (max-width: 1199.98px) {
+    input#navbar-search-phrase {
+        width: 240px;
+    }
 }
