--- a/src/app/comp/main/navbar/navbar.component.html
+++ b/src/app/comp/main/navbar/navbar.component.html
@@ -154,7 +154,9 @@
                     @for(locale of locales; track $index) {
                     <li class="dropdown-item cursor-pointer" (click)="onSwitchLocale(locale)">
                         @if(locale !== currentLocale) {
-                        <i ngClass="bi bi-translate me-2"></i>
+                        <!-- <i ngClass="bi bi-translate me-2"></i> -->
+                        <span
+                            [ngClass]="[ 'fi', 'me-1', 'fi-' + (locale != 'en' ? locale : 'us').toLowerCase()]"></span>
                         }
                         @else {
                         <i class="bi bi-check2-circle text-success me-2"></i>
