--- a/src/app/comp/result/config/config.component.html
+++ b/src/app/comp/result/config/config.component.html
@@ -1,28 +1,3 @@
 <ul class="treeview m-2">
-    <li>
-        <div>asdsad</div>
-        <ul class="branch">
-            <li>asdasd</li>
-            <li>asdasd</li>
-            <li>asdddd</li>
-        </ul>
-    </li>
-    <li class="has-children">
-        <div class="header">
-            <i class="bi bi-dash-square me-2"></i>
-            <span class="name">Test node</span>
-        </div>
-        <ul class="branch">
-            <li>saddd</li>
-            <li>
-                <div>asdsad</div>
-                <ul class="branch">
-                    <li>ddfgg</li>
-                    <li>vvvdfdvsdv svsdv</li>
-                    <li>sdvfdsfrew wfv</li>
-                    <li>dsdkldkkd</li>
-                </ul>
-            </li>
-        </ul>
-    </li>
+    <app-result-tree [tree]="fullConfigTree"></app-result-tree>
 </ul>
