--- a/src/app/comp/result/result.component.html
+++ b/src/app/comp/result/result.component.html
@@ -126,7 +126,7 @@
                             }
                         </div>
                         <div>
-                            <button type="button" class="btn btn-sm text-nowrap btn-outline-success"
+                            <button type="button" class="btn btn-sm text-nowrap btn-outline-secondary"
                                 (click)="onExportResultBtnClick()">
                                 <i class="bi bi-floppy-fill me-2"></i>
                                 {{ l10nphrase.result.toolbar.exportResults }}
@@ -139,19 +139,33 @@
 
             <!-- result container based on selected chapter -->
             <div class="card">
-                @switch (selectedChapter) {
-                @case ('ConfigItems') {
-                <app-result-config [configByTree]="configByTree" [configTreeKeys]="configTreeKeys"
-                    [configUpdate]="configUpdate"></app-result-config>
-                }
-                @default {
-                <app-result-overview [searchResult]="searchResult" [totalMatchCount]="totalMatchCount"
-                    [certstore]="certstore" [configByTree]="configByTree" [configTreeKeys]="configTreeKeys"
-                    [ippDevices]="ippDevices" [jobtypes]="jobtypes" [psetByTree]="psetByTree"
-                    [psetTreeKeys]="psetTreeKeys" [serverInfo]="serverInfo" [serverProperties]="serverProperties"
-                    [user]="user" [workflows]="workflows"></app-result-overview>
-                }
-                }
+                <div class="card-header">
+                    <h4 class="mb-0">
+                        @switch (selectedChapter) {
+                        @case ('ConfigItems') {
+                        {{l10nphrase.result.config.title}}
+                        }
+                        @default {
+                        {{ l10nphrase.result.overview.title }}
+                        }
+                        }
+                    </h4>
+                </div>
+                <div class="card-body d-flex">
+                    @switch (selectedChapter) {
+                    @case ('ConfigItems') {
+                    <app-result-config [configByTree]="configByTree" [configUpdate]="configUpdate"
+                        [searchResult]="searchResult"></app-result-config>
+                    }
+                    @default {
+                    <app-result-overview [searchResult]="searchResult" [totalMatchCount]="totalMatchCount"
+                        [certstore]="certstore" [configByTree]="configByTree" [configTreeKeys]="configTreeKeys"
+                        [ippDevices]="ippDevices" [jobtypes]="jobtypes" [psetByTree]="psetByTree"
+                        [psetTreeKeys]="psetTreeKeys" [serverInfo]="serverInfo" [serverProperties]="serverProperties"
+                        [user]="user" [workflows]="workflows"></app-result-overview>
+                    }
+                    }
+                </div>
             </div>
             <!-- result container based on selected chapter -->
 
