--- a/src/app/comp/result/tree/tree.component.html
+++ b/src/app/comp/result/tree/tree.component.html
@@ -1,19 +1,19 @@
 @for (item of tree; track $index) {
-<li [ngClass]="{ 'has-children': item.children.length > 0 , 'open': openNodes.includes($index)}">
+<li
+    [ngClass]="{ 'has-children': item.children.length > 0 , 'open': isOpen(item), 'has-match': this.matchedNodeUuids.includes(item.uuid)}">
     <div class="header">
         @if (item.children.length > 0) {
-        <i [ngClass]="['bi me-2', openNodes.includes($index) ? 'bi-dash-square' : 'bi-plus-square']"
-            (click)="toggleNode($index)"></i>
+        <i [ngClass]="['bi me-2', isOpen(item) ? 'bi-dash-square' : 'bi-plus-square']" (click)="toggleNode(item)"></i>
         }
         @else {
         <i [ngClass]="['bi me-2', getIcon(item)]"></i>
         }
-        <span class="name">{{ item.name }}</span>
+        <span class="name" [innerHTML]="item.name | highlight: searchResult.search.phrase"></span>
         <i class="bi bi-window-stack ms-2 show-on-hover"></i>
     </div>
     @if (item.children.length > 0) {
-    <ul [ngClass]="{ 'branch': true, 'd-none': !openNodes.includes($index) }">
-        <app-result-tree [tree]="item.children"></app-result-tree>
+    <ul [ngClass]="{ 'branch': true, 'd-none': !isOpen(item) }">
+        <app-result-tree [tree]="item.children" [treeUuids]="treeUuids" [searchResult]="searchResult"></app-result-tree>
     </ul>
     }
 </li>
