--- a/src/app/comp/result/config/config.component.html
+++ b/src/app/comp/result/config/config.component.html
@@ -1,5 +1,6 @@
 <p>{{l10nphrase.result.config.subtitle}}</p>
 
 <ul class="treeview m-2">
-    <app-result-tree [tree]="fullConfigTree" [treeUuids]="configUuids" [searchResult]="searchResult"></app-result-tree>
+    <app-result-tree [tree]="fullConfigTree" [treeUuids]="configUuids" [searchResult]="searchResult"
+        treetype="ConfigItems"></app-result-tree>
 </ul>
