--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div class="position-absolute" style="top: 0; left: 0; right: 0; height: 0;">
+    <app-node-inspector></app-node-inspector>
+</div>
 <router-outlet *ngIf="isLoggedIn === false"></router-outlet>
 <app-main *ngIf="isLoggedIn === true"></app-main>
 
